# pycon22-prometheus-workshop

./: Dockerfile  Makefile  README.md  docker-compose.yaml  grafana_datasources.yaml  prometheus.yaml  pyproject.toml
.github/workflows/: lint.yml
app/: Dockerfile  Pipfile  main.py  requirements.txt  util.py
app/templates/: treeCounter.html
