[tool.poetry]
name = "python-prometheus-workshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.1"
prometheus-client = "^0.13.1"
pytest = "^7.0.1"
pytest-httpserver = "^1.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
